# signal_transport

./: Cargo.toml  LICENSE  README.md
doc/: fdm-bandwidth  main.tex
src/: app.rs  consts.rs  controller.rs  demodulators.rs  demultiplexer.rs  draw.rs  filters.rs  generators.rs  main.rs  modulators.rs  multiplexer.rs  samples.rs  simulation_options.rs  state.rs  traits.rs
src/modulators/: mod.rs  sawtooth.rs  sine.rs  square.rs
