[package]
name = "signal_transport"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
eframe = "0.17"
egui = "0.17"
parking_lot = "0.12"
flume = "0.10"
num-traits = "0.2"

[dependencies.spectrum-analyzer]
default-features = false
version = "1.2.3"
features = ["rustfft-complex"]

[profile.release]
opt-level = 2
